# Hackaton_NLP_ASU

./: README.md  dataREADME.md  main.py  pyproject.toml  requirements.txt  setup.py  train_comments_en.csv
data/: README.md  read.me  test_comments_en.csv  test_issues_en.csv  train_issues_en.csv
librarys/: README.md  read.me
notebooks/: 14.09.22 выбросы_описание_комменты_переводы_0.099_.ipynb  Baseline_2 lem_stem_bigramm 0.77627.ipynb  EDA.ipynb  README.md  example.py  read.me
src/featuring/: featuring.py
src/featuring403/: multyp2.py  translator.py
